[gd_scene load_steps=13 format=4 uid="uid://7yb6dnbcfhau"]

[ext_resource type="Shader" uid="uid://bfdt70142kbuu" path="res://assets/shaders/crt.gdshader" id="1_2hkxj"]
[ext_resource type="PackedScene" uid="uid://d0vk5l38u7t7f" path="res://entities/employee.tscn" id="2_7qhrm"]
[ext_resource type="Texture2D" uid="uid://bovx11t8rha7n" path="res://assets/images/tile.png" id="3_v2bdg"]
[ext_resource type="PackedScene" uid="uid://c61lolblblgxh" path="res://entities/boss.tscn" id="4_cuk6w"]
[ext_resource type="Script" uid="uid://bprb8epjqd178" path="res://assets/scripts/interactable_npc.gd" id="5_7lhrj"]
[ext_resource type="AudioStream" uid="uid://8lm5xryyphcg" path="res://assets/sounds/video-game-text-330163.mp3" id="6_2k7t8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1wybe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hicdd"]
shader = ExtResource("1_2hkxj")
shader_parameter/resolution = Vector2(640, 360)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[sub_resource type="QuadMesh" id="QuadMesh_js2is"]
size = Vector2(1280, 720)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cuk6w"]
texture = ExtResource("3_v2bdg")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, -0.179857, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.809364, -16, -0.719435, 16, -16, 16, -16, -16)

[sub_resource type="TileSet" id="TileSet_7lhrj"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_cuk6w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lhrj"]
size = Vector2(47.5, 37.25)

[node name="Earth Defence Force Terminal" type="Node2D"]
material = SubResource("ShaderMaterial_1wybe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CRT" type="MeshInstance2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_hicdd")
position = Vector2(640, 360)
mesh = SubResource("QuadMesh_js2is")

[node name="Employee" parent="." instance=ExtResource("2_7qhrm")]
z_index = 10
position = Vector2(640, 360)

[node name="Camera2D" type="Camera2D" parent="Employee"]
zoom = Vector2(2, 2)

[node name="BG" type="ColorRect" parent="Employee/Camera2D"]
z_index = -10
offset_left = -161.0
offset_top = -140.0
offset_right = 162.0
offset_bottom = 150.0
color = Color(0, 0, 0, 1)

[node name="Textbar" type="ColorRect" parent="Employee/Camera2D"]
visible = false
z_index = 10
offset_left = -160.0
offset_top = -64.0
offset_right = 160.0
offset_bottom = -32.0

[node name="RichTextLabel" type="RichTextLabel" parent="Employee/Camera2D/Textbar"]
layout_mode = 0
offset_left = 82.0
offset_top = 20.0
offset_right = 713.43
offset_bottom = 70.0
scale = Vector2(0.25, 0.25)
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ"
fit_content = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAARAA0AAQAAAAAAAAARAA4AAQAAAAAAAAASAA0AAQAAAAAAAAASAA4AAQAAAAAAAAATAA0AAQAAAAAAAAATAA4AAQAAAAAAAAAUAA0AAQAAAAAAAAAUAA4AAQAAAAAAAAAVAA0AAQAAAAAAAAAVAA4AAQAAAAAAAAAWAA0AAQAAAAAAAAAWAA4AAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAXAA0AAQAAAAAAAAAXAA4AAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAPAA0AAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAAAAAAPAA4AAQAAAAAAAAAQAA4AAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAYAAQAAAAAAAAAWAAUAAQAAAAAAAAAWAAYAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAQAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAA0AAQAAAAAAAAAKAA4AAQAAAAAAAAAZAAMAAQAAAAAAAAAZAAQAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAAAAAAbAAMAAQAAAAAAAAAbAAQAAQAAAAAAAAAcAAMAAQAAAAAAAAAcAAQAAQAAAAAAAAAdAAMAAQAAAAAAAAAdAAQAAQAAAAAAAAAdAAUAAQAAAAAAAAAdAAYAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAgAAQAAAAAAAAAdAAkAAQAAAAAAAAAdAAoAAQAAAAAAAAAdAA0AAQAAAAAAAAAdAA4AAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAQAAQAAAAAAAAAeAAUAAQAAAAAAAAAeAAYAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAA0AAQAAAAAAAAAeAA4AAQAAAAAAAAAJAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAKAA8AAQAAAAAAAAAKABAAAQAAAAAAAAAKABEAAQAAAAAAAAAKABIAAQAAAAAAAAALABEAAQAAAAAAAAALABIAAQAAAAAAAAAMABEAAQAAAAAAAAAMABIAAQAAAAAAAAANABEAAQAAAAAAAAANABIAAQAAAAAAAAAOABEAAQAAAAAAAAAOABIAAQAAAAAAAAAPABEAAQAAAAAAAAAPABIAAQAAAAAAAAAQABEAAQAAAAAAAAAQABIAAQAAAAAAAAARABEAAQAAAAAAAAARABIAAQAAAAAAAAASABEAAQAAAAAAAAASABIAAQAAAAAAAAATABEAAQAAAAAAAAATABIAAQAAAAAAAAAUABEAAQAAAAAAAAAUABIAAQAAAAAAAAAVABEAAQAAAAAAAAAVABIAAQAAAAAAAAAWABEAAQAAAAAAAAAWABIAAQAAAAAAAAAXABEAAQAAAAAAAAAXABIAAQAAAAAAAAAYABEAAQAAAAAAAAAYABIAAQAAAAAAAAAZABEAAQAAAAAAAAAZABIAAQAAAAAAAAAaABEAAQAAAAAAAAAaABIAAQAAAAAAAAAbABEAAQAAAAAAAAAbABIAAQAAAAAAAAAcABEAAQAAAAAAAAAcABIAAQAAAAAAAAAdABEAAQAAAAAAAAAdABIAAQAAAAAAAAAeABEAAQAAAAAAAAAeABIAAQAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAAAAAAeAA8AAQAAAAAAAAAeABAAAQAAAAAAAAARAAkAAQABAAAAAAARAAoAAQACAAAAAAAXAAUAAQADAAAAAAAXAAYAAQAEAAAAAAAaAAUAAQABAAAAAAAaAAYAAQACAAAAAAAcAAUAAQABAAAAAAAcAAYAAQACAAAAAAANAAUAAQABAAAAAAALAAUAAQABAAAAAAALAAYAAQACAAAAAAANAAYAAQACAAAAAAAQAAUAAQADAAAAABAQAAYAAQAEAAAAABAFAA0AAQAAAAAAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAGAA0AAQAAAAAAAAAGAA4AAQAAAAAAAAAGAA8AAQAAAAAAAAAGABAAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAP//AQAAAAAAADAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAAMAP//AQAAAAAAAAAMAAAAAQAAAAAAAAANAP//AQAAAAAAAAANAAAAAQAAAAAAAAAOAP//AQAAAAAAAAAOAAAAAQAAAAAAAAAPAP//AQAAAAAAAAAPAAAAAQAAAAAAAAAQAP//AQAAAAAAAAAQAAAAAQAAAAAAAAARAP//AQAAAAAAAAARAAAAAQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAATAP//AQAAAAAAAAATAAAAAQAAAAAAAAAUAP//AQAAAAAAAAAUAAAAAQAAAAAAAAAVAP//AQAAAAAAAAAVAAAAAQAAAAAAAAAWAP//AQAAAAAAAAAWAAAAAQAAAAAAAAAXAP//AQAAAAAAAAAXAAAAAQAAAAAAAAAYAP//AQAAAAAAAAAYAAAAAQAAAAAAAAAZAP//AQAAAAAAAAAZAAAAAQAAAAAAAAAaAP//AQAAAAAAAAAaAAAAAQAAAAAAAAAbAP//AQAAAAAAAAAbAAAAAQAAAAAAAAAcAP//AQAAAAAAAAAcAAAAAQAAAAAAAAAdAP//AQAAAAAAAAAdAAAAAQAAAAAAAAAeAP//AQAAAAAAAAAeAAAAAQAAAAAAAAAfAP//AQAAAAAAAAAfAAAAAQAAAAAAAAAgAP//AQAAAAAAAAAgAAAAAQAAAAAAAAAhAP//AQAAAAAAAAAhAAAAAQAAAAAAAAAhAAEAAQAAAAAAAAAhAAIAAQAAAAAAAAAhAAMAAQAAAAAAAAAhAAQAAQAAAAAAAAAhAAUAAQAAAAAAAAAhAAYAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAgAAQAAAAAAAAAhAAkAAQAAAAAAAAAhAAoAAQAAAAAAAAAhAAsAAQAAAAAAAAAhAAwAAQAAAAAAAAAhAA0AAQAAAAAAAAAhAA4AAQAAAAAAAAAhAA8AAQAAAAAAAAAhABAAAQAAAAAAAAAhABEAAQAAAAAAAAAhABIAAQAAAAAAAAAiAP//AQAAAAAAAAAiAAAAAQAAAAAAAAAiAAEAAQAAAAAAAAAiAAIAAQAAAAAAAAAiAAMAAQAAAAAAAAAiAAQAAQAAAAAAAAAiAAUAAQAAAAAAAAAiAAYAAQAAAAAAAAAiAAcAAQAAAAAAAAAiAAgAAQAAAAAAAAAiAAkAAQAAAAAAAAAiAAoAAQAAAAAAAAAiAAsAAQAAAAAAAAAiAAwAAQAAAAAAAAAiAA0AAQAAAAAAAAAiAA4AAQAAAAAAAAAiAA8AAQAAAAAAAAAiABAAAQAAAAAAAAAiABEAAQAAAAAAAAAiABIAAQAAAAAAAAAFABMAAQAAAAAAAAAFABQAAQAAAAAAAAAFABUAAQAAAAAAAAAFABYAAQAAAAAAAAAGABMAAQAAAAAAAAAGABQAAQAAAAAAAAAGABUAAQAAAAAAAAAGABYAAQAAAAAAAAAHABUAAQAAAAAAAAAHABYAAQAAAAAAAAAIABUAAQAAAAAAAAAIABYAAQAAAAAAAAAJABUAAQAAAAAAAAAJABYAAQAAAAAAAAAKABUAAQAAAAAAAAAKABYAAQAAAAAAAAALABUAAQAAAAAAAAALABYAAQAAAAAAAAAMABUAAQAAAAAAAAAMABYAAQAAAAAAAAANABUAAQAAAAAAAAANABYAAQAAAAAAAAAOABUAAQAAAAAAAAAOABYAAQAAAAAAAAAPABUAAQAAAAAAAAAPABYAAQAAAAAAAAAQABUAAQAAAAAAAAAQABYAAQAAAAAAAAARABUAAQAAAAAAAAARABYAAQAAAAAAAAASABUAAQAAAAAAAAASABYAAQAAAAAAAAATABUAAQAAAAAAAAATABYAAQAAAAAAAAAUABUAAQAAAAAAAAAUABYAAQAAAAAAAAAVABUAAQAAAAAAAAAVABYAAQAAAAAAAAAWABUAAQAAAAAAAAAWABYAAQAAAAAAAAAXABUAAQAAAAAAAAAXABYAAQAAAAAAAAAYABUAAQAAAAAAAAAYABYAAQAAAAAAAAAZABUAAQAAAAAAAAAZABYAAQAAAAAAAAAaABUAAQAAAAAAAAAaABYAAQAAAAAAAAAbABUAAQAAAAAAAAAbABYAAQAAAAAAAAAcABUAAQAAAAAAAAAcABYAAQAAAAAAAAAdABUAAQAAAAAAAAAdABYAAQAAAAAAAAAeABUAAQAAAAAAAAAeABYAAQAAAAAAAAAfABUAAQAAAAAAAAAfABYAAQAAAAAAAAAgABUAAQAAAAAAAAAgABYAAQAAAAAAAAAhABUAAQAAAAAAAAAhABYAAQAAAAAAAAAiABUAAQAAAAAAAAAiABYAAQAAAAAAAAAhABMAAQAAAAAAAAAhABQAAQAAAAAAAAAiABMAAQAAAAAAAAAiABQAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAwAAQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAA0AAQAAAAAAAAAAAA4AAQAAAAAAAAAAAA8AAQAAAAAAAAAAABAAAQAAAAAAAAAAABEAAQAAAAAAAAAAABIAAQAAAAAAAAAAABMAAQAAAAAAAAAAABQAAQAAAAAAAAAAABUAAQAAAAAAAAAAABYAAQAAAAAAAAAAABcAAQAAAAAAAAAAABgAAQAAAAAAAAAAABkAAQAAAAAAAAAAABoAAQAAAAAAAAAAABsAAQAAAAAAAAABABsAAQAAAAAAAAACABsAAQAAAAAAAAADABsAAQAAAAAAAAAEABsAAQAAAAAAAAAFABsAAQAAAAAAAAAGABsAAQAAAAAAAAAJABsAAQAAAAAAAAAKABsAAQAAAAAAAAALABsAAQAAAAAAAAAMABsAAQAAAAAAAAANABsAAQAAAAAAAAAOABsAAQAAAAAAAAAPABsAAQAAAAAAAAAQABsAAQAAAAAAAAARABsAAQAAAAAAAAASABsAAQAAAAAAAAATABsAAQAAAAAAAAAUABsAAQAAAAAAAAAVABsAAQAAAAAAAAAWABsAAQAAAAAAAAAXABsAAQAAAAAAAAAYABsAAQAAAAAAAAAZABsAAQAAAAAAAAAaABsAAQAAAAAAAAAbABsAAQAAAAAAAAAcABsAAQAAAAAAAAAdABsAAQAAAAAAAAAeABsAAQAAAAAAAAAfABsAAQAAAAAAAAAgABsAAQAAAAAAAAAhABsAAQAAAAAAAAAiABsAAQAAAAAAAAAjABsAAQAAAAAAAAAkABsAAQAAAAAAAAAlABsAAQAAAAAAAAAmABsAAQAAAAAAAAAnABsAAQAAAAAAAAAnAP//AQAAAAAAAAAnAAAAAQAAAAAAAAAnAAEAAQAAAAAAAAAnAAIAAQAAAAAAAAAnAAMAAQAAAAAAAAAnAAQAAQAAAAAAAAAnAAUAAQAAAAAAAAAnAAYAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAgAAQAAAAAAAAAnAAkAAQAAAAAAAAAnAAwAAQAAAAAAAAAnAA0AAQAAAAAAAAAnAA4AAQAAAAAAAAAnAA8AAQAAAAAAAAAnABAAAQAAAAAAAAAnABEAAQAAAAAAAAAnABIAAQAAAAAAAAAnABMAAQAAAAAAAAAnABQAAQAAAAAAAAAnABUAAQAAAAAAAAAnABYAAQAAAAAAAAAnABcAAQAAAAAAAAAnABgAAQAAAAAAAAAnABkAAQAAAAAAAAAnABoAAQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAPr/AQAAAAAAAAADAPr/AQAAAAAAAAAEAPr/AQAAAAAAAAAFAPr/AQAAAAAAAAAGAPr/AQAAAAAAAAAHAPr/AQAAAAAAAAAIAPr/AQAAAAAAAAAJAPr/AQAAAAAAAAAKAPr/AQAAAAAAAAALAPr/AQAAAAAAAAAMAPr/AQAAAAAAAAANAPr/AQAAAAAAAAAOAPr/AQAAAAAAAAAPAPr/AQAAAAAAAAAQAPr/AQAAAAAAAAARAPr/AQAAAAAAAAASAPr/AQAAAAAAAAATAPr/AQAAAAAAAAAUAPr/AQAAAAAAAAAVAPr/AQAAAAAAAAAWAPr/AQAAAAAAAAAXAPr/AQAAAAAAAAAYAPr/AQAAAAAAAAAZAPr/AQAAAAAAAAAaAPr/AQAAAAAAAAAbAPr/AQAAAAAAAAAcAPr/AQAAAAAAAAAdAPr/AQAAAAAAAAAeAPr/AQAAAAAAAAAfAPr/AQAAAAAAAAAgAPr/AQAAAAAAAAAhAPr/AQAAAAAAAAAiAPr/AQAAAAAAAAAjAPr/AQAAAAAAAAAkAPr/AQAAAAAAAAAlAPr/AQAAAAAAAAAmAPr/AQAAAAAAAAAnAPr/AQAAAAAAAAAnAPv/AQAAAAAAAAAnAPz/AQAAAAAAAAAnAP3/AQAAAAAAAAAnAP7/AQAAAAAAAAD///n/AQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAD///z/AQAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAD//wkAAQAAAAAAAAD//woAAQAAAAAAAAD//wsAAQAAAAAAAAD//wwAAQAAAAAAAAD//w0AAQAAAAAAAAD//w4AAQAAAAAAAAD//w8AAQAAAAAAAAD//xAAAQAAAAAAAAD//xEAAQAAAAAAAAD//xIAAQAAAAAAAAD//xMAAQAAAAAAAAD//xQAAQAAAAAAAAD//xUAAQAAAAAAAAD//xYAAQAAAAAAAAD//xcAAQAAAAAAAAD//xgAAQAAAAAAAAD//xkAAQAAAAAAAAD//xoAAQAAAAAAAAD//xsAAQAAAAAAAAD//xwAAQAAAAAAAAAAAPn/AQAAAAAAAAAAABwAAQAAAAAAAAADAPn/AQAAAAAAAAAEAPn/AQAAAAAAAAAFAPn/AQAAAAAAAAAGAPn/AQAAAAAAAAAHAPn/AQAAAAAAAAAIAPn/AQAAAAAAAAAJAPn/AQAAAAAAAAAKAPn/AQAAAAAAAAALAPn/AQAAAAAAAAAMAPn/AQAAAAAAAAANAPn/AQAAAAAAAAAOAPn/AQAAAAAAAAAPAPn/AQAAAAAAAAAQAPn/AQAAAAAAAAARAPn/AQAAAAAAAAASAPn/AQAAAAAAAAATAPn/AQAAAAAAAAAUAPn/AQAAAAAAAAAVAPn/AQAAAAAAAAAWAPn/AQAAAAAAAAAXAPn/AQAAAAAAAAAYAPn/AQAAAAAAAAAZAPn/AQAAAAAAAAAaAPn/AQAAAAAAAAAbAPn/AQAAAAAAAAAcAPn/AQAAAAAAAAAdAPn/AQAAAAAAAAAeAPn/AQAAAAAAAAAfAPn/AQAAAAAAAAAgAPn/AQAAAAAAAAAhAPn/AQAAAAAAAAAiAPn/AQAAAAAAAAAjAPn/AQAAAAAAAAAkAPn/AQAAAAAAAAAlAPn/AQAAAAAAAAAmAPn/AQAAAAAAAAAnAPn/AQAAAAAAAAAoAPn/AQAAAAAAAAAoAPr/AQAAAAAAAAAnABwAAQAAAAAAAAAoAPv/AQAAAAAAAAAoAPz/AQAAAAAAAAAoAP3/AQAAAAAAAAAoAP7/AQAAAAAAAAAoAP//AQAAAAAAAAAoAAAAAQAAAAAAAAAoAAEAAQAAAAAAAAAoAAIAAQAAAAAAAAAoAAMAAQAAAAAAAAAoAAQAAQAAAAAAAAAoAAUAAQAAAAAAAAAoAAYAAQAAAAAAAAAoAAcAAQAAAAAAAAAoAAgAAQAAAAAAAAAoAAkAAQAAAAAAAAAoAAwAAQAAAAAAAAAoAA0AAQAAAAAAAAAoAA4AAQAAAAAAAAAoAA8AAQAAAAAAAAAoABAAAQAAAAAAAAAoABEAAQAAAAAAAAAoABIAAQAAAAAAAAAoABMAAQAAAAAAAAAoABQAAQAAAAAAAAAoABUAAQAAAAAAAAAoABYAAQAAAAAAAAAoABcAAQAAAAAAAAAoABgAAQAAAAAAAAAoABkAAQAAAAAAAAAoABoAAQAAAAAAAAAoABsAAQAAAAAAAAAoABwAAQAAAAAAAAABABwAAQAAAAAAAAACABwAAQAAAAAAAAADABwAAQAAAAAAAAAEABwAAQAAAAAAAAAFABwAAQAAAAAAAAAGABwAAQAAAAAAAAAJABwAAQAAAAAAAAAKABwAAQAAAAAAAAALABwAAQAAAAAAAAAMABwAAQAAAAAAAAANABwAAQAAAAAAAAAOABwAAQAAAAAAAAAPABwAAQAAAAAAAAAQABwAAQAAAAAAAAARABwAAQAAAAAAAAASABwAAQAAAAAAAAATABwAAQAAAAAAAAAUABwAAQAAAAAAAAAVABwAAQAAAAAAAAAWABwAAQAAAAAAAAAXABwAAQAAAAAAAAAYABwAAQAAAAAAAAAZABwAAQAAAAAAAAAaABwAAQAAAAAAAAAbABwAAQAAAAAAAAAcABwAAQAAAAAAAAAdABwAAQAAAAAAAAAeABwAAQAAAAAAAAAfABwAAQAAAAAAAAAgABwAAQAAAAAAAAAhABwAAQAAAAAAAAAiABwAAQAAAAAAAAAjABwAAQAAAAAAAAAkABwAAQAAAAAAAAAlABwAAQAAAAAAAAAmABwAAQAAAAAAAAD///f/AQAAAAAAAAD///j/AQAAAAAAAAAAAPf/AQAAAAAAAAAAAPj/AQAAAAAAAAD///P/AQAAAAAAAAD///T/AQAAAAAAAAD///X/AQAAAAAAAAD///b/AQAAAAAAAAAAAPP/AQAAAAAAAAAAAPT/AQAAAAAAAAAAAPX/AQAAAAAAAAAAAPb/AQAAAAAAAAD///H/AQAAAAAAAAD///L/AQAAAAAAAAAAAPH/AQAAAAAAAAAAAPL/AQAAAAAAAAD//+//AQAAAAAAAAD///D/AQAAAAAAAAAAAO//AQAAAAAAAAAAAPD/AQAAAAAAAAABAO//AQAAAAAAAAABAPD/AQAAAAAAAAACAO//AQAAAAAAAAACAPD/AQAAAAAAAAADAO//AQAAAAAAAAADAPD/AQAAAAAAAAAEAO//AQAAAAAAAAAEAPD/AQAAAAAAAAAFAO//AQAAAAAAAAAFAPD/AQAAAAAAAAAGAO//AQAAAAAAAAAGAPD/AQAAAAAAAAAHAO//AQAAAAAAAAAHAPD/AQAAAAAAAAAIAO//AQAAAAAAAAAIAPD/AQAAAAAAAAAJAO//AQAAAAAAAAAJAPD/AQAAAAAAAAAKAO//AQAAAAAAAAAKAPD/AQAAAAAAAAAJAPH/AQAAAAAAAAAJAPL/AQAAAAAAAAAJAPP/AQAAAAAAAAAJAPT/AQAAAAAAAAAJAPX/AQAAAAAAAAAJAPb/AQAAAAAAAAAJAPf/AQAAAAAAAAAJAPj/AQAAAAAAAAAKAPH/AQAAAAAAAAAKAPL/AQAAAAAAAAAKAPP/AQAAAAAAAAAKAPT/AQAAAAAAAAAKAPX/AQAAAAAAAAAKAPb/AQAAAAAAAAAKAPf/AQAAAAAAAAAKAPj/AQAAAAAAAAABAPL/AQACAAAAAAADAPL/AQACAAAAAAAFAPL/AQACAAAAAAAHAPL/AQACAAAAAAAHAPH/AQABAAAAAAAFAPH/AQABAAAAAAADAPH/AQABAAAAAAABAPH/AQABAAAAAAAIAPf/AQADAAAAABAIAPX/AQADAAAAABAIAPb/AQAEAAAAABAIAPj/AQAEAAAAABAFAB0AAQAAAAAAAAAFAB4AAQAAAAAAAAAFAB8AAQAAAAAAAAAFACAAAQAAAAAAAAAFACEAAQAAAAAAAAAFACIAAQAAAAAAAAAGAB0AAQAAAAAAAAAGAB4AAQAAAAAAAAAGAB8AAQAAAAAAAAAGACAAAQAAAAAAAAAGACEAAQAAAAAAAAAGACIAAQAAAAAAAAAJAB0AAQAAAAAAAAAJAB4AAQAAAAAAAAAJAB8AAQAAAAAAAAAJACAAAQAAAAAAAAAJACEAAQAAAAAAAAAJACIAAQAAAAAAAAAKAB0AAQAAAAAAAAAKAB4AAQAAAAAAAAAKAB8AAQAAAAAAAAAKACAAAQAAAAAAAAAKACEAAQAAAAAAAAAKACIAAQAAAAAAAAAFACMAAQAAAAAAAAAFACQAAQAAAAAAAAAFACUAAQAAAAAAAAAFACYAAQAAAAAAAAAGACMAAQAAAAAAAAAGACQAAQAAAAAAAAAGACUAAQAAAAAAAAAGACYAAQAAAAAAAAAHACUAAQAAAAAAAAAHACYAAQAAAAAAAAAIACUAAQAAAAAAAAAIACYAAQAAAAAAAAAJACUAAQAAAAAAAAAJACYAAQAAAAAAAAAKACUAAQAAAAAAAAAKACYAAQAAAAAAAAALACUAAQAAAAAAAAALACYAAQAAAAAAAAAMACUAAQAAAAAAAAAMACYAAQAAAAAAAAANACUAAQAAAAAAAAANACYAAQAAAAAAAAAOACUAAQAAAAAAAAAOACYAAQAAAAAAAAAPACUAAQAAAAAAAAAPACYAAQAAAAAAAAAQACUAAQAAAAAAAAAQACYAAQAAAAAAAAAPACAAAQAAAAAAAAAPACEAAQAAAAAAAAAPACIAAQAAAAAAAAAPACMAAQAAAAAAAAAPACQAAQAAAAAAAAAQACAAAQAAAAAAAAAQACEAAQAAAAAAAAAQACIAAQAAAAAAAAAQACMAAQAAAAAAAAAQACQAAQAAAAAAAAANACEAAQAAAAAAAAANACIAAQAAAAAAAAAOACEAAQAAAAAAAAAOACIAAQAAAAAAAAAPAB8AAQAAAAAAAAAQAB8AAQAAAAAAAAARAB8AAQAAAAAAAAARACAAAQAAAAAAAAASAB8AAQAAAAAAAAASACAAAQAAAAAAAAATAB8AAQAAAAAAAAATACAAAQAAAAAAAAAUAB8AAQAAAAAAAAAUACAAAQAAAAAAAAAVAB8AAQAAAAAAAAAVACAAAQAAAAAAAAAWAB8AAQAAAAAAAAAWACAAAQAAAAAAAAAVACEAAQAAAAAAAAAVACIAAQAAAAAAAAAVACUAAQAAAAAAAAAVACYAAQAAAAAAAAAWACEAAQAAAAAAAAAWACIAAQAAAAAAAAAWACUAAQAAAAAAAAAWACYAAQAAAAAAAAAXACUAAQAAAAAAAAAXACYAAQAAAAAAAAAYACUAAQAAAAAAAAAYACYAAQAAAAAAAAAZACUAAQAAAAAAAAAZACYAAQAAAAAAAAAaACUAAQAAAAAAAAAaACYAAQAAAAAAAAAbACUAAQAAAAAAAAAbACYAAQAAAAAAAAAcACUAAQAAAAAAAAAcACYAAQAAAAAAAAAdACUAAQAAAAAAAAAdACYAAQAAAAAAAAAeACUAAQAAAAAAAAAeACYAAQAAAAAAAAAfACUAAQAAAAAAAAAfACYAAQAAAAAAAAAgACUAAQAAAAAAAAAgACYAAQAAAAAAAAAhACUAAQAAAAAAAAAhACYAAQAAAAAAAAAiACUAAQAAAAAAAAAiACYAAQAAAAAAAAAjACUAAQAAAAAAAAAjACYAAQAAAAAAAAAkACUAAQAAAAAAAAAkACYAAQAAAAAAAAAlACUAAQAAAAAAAAAlACYAAQAAAAAAAAAmACUAAQAAAAAAAAAmACYAAQAAAAAAAAAnACUAAQAAAAAAAAAnACYAAQAAAAAAAAAoACUAAQAAAAAAAAAoACYAAQAAAAAAAAAnAB0AAQAAAAAAAAAnAB4AAQAAAAAAAAAnAB8AAQAAAAAAAAAnACAAAQAAAAAAAAAnACEAAQAAAAAAAAAnACIAAQAAAAAAAAAnACMAAQAAAAAAAAAnACQAAQAAAAAAAAAoAB0AAQAAAAAAAAAoAB4AAQAAAAAAAAAoAB8AAQAAAAAAAAAoACAAAQAAAAAAAAAoACEAAQAAAAAAAAAoACIAAQAAAAAAAAAoACMAAQAAAAAAAAAoACQAAQAAAAAAAAAZAB0AAQAAAAAAAAAZAB4AAQAAAAAAAAAZAB8AAQAAAAAAAAAZACAAAQAAAAAAAAAZACEAAQAAAAAAAAAZACIAAQAAAAAAAAAaAB0AAQAAAAAAAAAaAB4AAQAAAAAAAAAaAB8AAQAAAAAAAAAaACAAAQAAAAAAAAAaACEAAQAAAAAAAAAaACIAAQAAAAAAAAAdACEAAQAAAAAAAAAdACIAAQAAAAAAAAAdACMAAQAAAAAAAAAdACQAAQAAAAAAAAAeACEAAQAAAAAAAAAeACIAAQAAAAAAAAAeACMAAQAAAAAAAAAeACQAAQAAAAAAAAAdAB0AAQAAAAAAAAAdAB4AAQAAAAAAAAAeAB0AAQAAAAAAAAAeAB4AAQAAAAAAAAAgACIAAQABAAAAAAAgAB4AAQABAAAAAAAiAB4AAQABAAAAAAAiACIAAQABAAAAAAAkACIAAQABAAAAAAAkAB4AAQABAAAAAAAmACIAAQABAAAAAAAmAB4AAQABAAAAAAAgACMAAQACAAAAAAAiACMAAQACAAAAAAAkACMAAQACAAAAAAAmACMAAQACAAAAAAAmAB8AAQACAAAAAAAkAB8AAQACAAAAAAAiAB8AAQACAAAAAAAgAB8AAQACAAAAAAATACUAAQAAAAAAAAATACYAAQAAAAAAAAAUACUAAQAAAAAAAAAUACYAAQAAAAAAAAATACcAAQAAAAAAAAATACgAAQAAAAAAAAATACkAAQAAAAAAAAATACoAAQAAAAAAAAAUACcAAQAAAAAAAAAUACgAAQAAAAAAAAAUACkAAQAAAAAAAAAUACoAAQAAAAAAAAAPACcAAQAAAAAAAAAPACgAAQAAAAAAAAAPACkAAQAAAAAAAAAPACoAAQAAAAAAAAAQACcAAQAAAAAAAAAQACgAAQAAAAAAAAAQACkAAQAAAAAAAAAQACoAAQAAAAAAAAARACoAAQAFAAAAAAASACoAAQAFAAAAAAAnAAsAAQAGAAAAAAAnAAoAAQAGAAAAAAA=")
tile_set = SubResource("TileSet_7lhrj")

[node name="Boss" parent="." instance=ExtResource("4_cuk6w")]
position = Vector2(231, -304)
scale = Vector2(-4, 4)

[node name="Area2D" type="Area2D" parent="Boss" node_paths=PackedStringArray("textbar", "rich_text_label", "area_2d", "typing_sound")]
script = ExtResource("5_7lhrj")
textbar = NodePath("../../Employee/Camera2D/Textbar")
rich_text_label = NodePath("../../Employee/Camera2D/Textbar/RichTextLabel")
area_2d = NodePath("../../Employee/Area2D")
typing_sound = NodePath("../../RightTypin")
dialogue_path = "boss_talk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Area2D"]
position = Vector2(13.75, -2.125)
shape = SubResource("RectangleShape2D_7lhrj")

[node name="RightTypin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2k7t8")

[connection signal="area_entered" from="Boss/Area2D" to="Boss/Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Boss/Area2D" to="Boss/Area2D" method="_on_area_exited"]

[editable path="Employee"]
